[tool.poetry]
name = "uclb-trading-research"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.1.3"
numpy = "^1.26.2"
plotly = "^5.18.0"
requests = "^2.31.0"
statsmodels = "^0.14.0"
arch = "^6.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
